--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <body>
-  <h1>Paul von Kunhardt</h1>
-  <p>Welcome to my website!</p>
+  <h1>An mein Mucki:</h1>
+  <p>Hallo Hannali, hoffe deinem Rücken geht's bald besser! I miss you, dein Pauli!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
