--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
   <h1>An mein Mucki:</h1>
-  <p>Hallo Hannali, hoffe deinem Rücken geht's bald besser! I miss you, dein Pauli!</p>
+  <p>Hallo Hannali, hoffe deinem Rücken geht's bald besser! <br>I miss you, dein Pauli!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
